--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/axios": "^5.5.2",
     "cross-env": "^5.2.0",
     "nuxt": "^2.4.0",
+    "vue-flickity": "^1.1.2",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
